--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^7.0.0",
         "next": "15.5.0",
+        "next-pwa": "^5.6.0",
         "react": "19.1.0",
         "react-dom": "19.1.0"
     },
