--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^7.0.0",
+        "moment": "^2.30.1",
         "next": "15.5.0",
         "next-pwa": "^5.6.0",
         "react": "19.1.0",
+        "react-big-calendar": "^1.19.4",
         "react-dom": "19.1.0"
     },
     "devDependencies": {
