--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "theme_color": "#8936FF",
-    "background_color": "#2EC6FE",
+    "theme_color": "#00000000",
+    "background_color": "#F1F5F9",
     "icons": [
         {
             "purpose": "maskable",
