--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "theme_color": "#00000000",
-    "background_color": "#F1F5F9",
+    "theme_color": "#FFFFFF",
+    "background_color": "FFFFFF",
     "icons": [
         {
             "purpose": "maskable",
