--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^7.0.0",
+        "jspdf": "^3.0.2",
+        "jspdf-autotable": "^5.0.2",
         "moment": "^2.30.1",
         "next": "15.5.0",
         "next-pwa": "^5.6.0",
         "react": "19.1.0",
         "react-big-calendar": "^1.19.4",
-        "react-dom": "19.1.0"
+        "react-dom": "19.1.0",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
