--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
         "daisyui": "^5.0.50",
         "eslint": "^9",
         "eslint-config-next": "15.5.0",
+        "next-sitemap": "^4.2.3",
         "tailwindcss": "^4"
     }
 }
