--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
         "react": "19.1.0",
         "react-big-calendar": "^1.19.4",
         "react-dom": "19.1.0",
-        "xlsx": "^0.18.5"
+        "xlsx": "^0.18.5",
+        "yup": "^1.7.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
