--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,9 +2,10 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "next dev --turbopack",
-        "build": "next build",
+        "build": "next build && next-sitemap",
         "start": "next start",
         "lint": "eslint"
     },
