--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,26 +1,40 @@
 {
-    "theme_color": "#000000",
+    "id": "/?source=pwa",
+    "name": "IglePay System",
+    "short_name": "IglePay",
+    "description": "Sistema de gestión y pagos para iglesias con soporte PWA.",
+    "start_url": "/",
+    "scope": "/",
+    "display": "standalone",
+    "orientation": "any",
     "background_color": "#FFFFFF",
+    "theme_color": "#000000",
+    "dir": "auto",
+    "lang": "es-ES",
     "icons": [
         {
-            "purpose": "maskable",
-            "sizes": "512x512",
             "src": "icon512_maskable.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "icon512_rounded.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any"
+        }
+    ],
+    "screenshots": [
+        {
+            "src": "screenshots/home.png",
+            "sizes": "1080x1920",
             "type": "image/png"
         },
         {
-            "purpose": "any",
-            "sizes": "512x512",
-            "src": "icon512_rounded.png",
+            "src": "screenshots/dashboard.png",
+            "sizes": "1080x1920",
             "type": "image/png"
         }
-    ],
-    "orientation": "any",
-    "display": "standalone",
-    "dir": "auto",
-    "lang": "es-ES",
-    "start_url": "/",
-    "scope": "/",
-    "name": "IglePay System",
-    "short_name": "IglePay"
+    ]
 }
